--- a/A-H_stringRadiationCuspless_toRun1.ipynb
+++ b/A-H_stringRadiationCuspless_toRun1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,6 +52,9 @@
     "def Cr(a,theta):\n",
     "    return (np.cos(theta) * np.sin(a))**2\n",
     "\n",
+    "def CrM(a,theta):\n",
+    "    return (np.sin(theta) * np.sin(a))**2\n",
+    "\n",
     "def Dp(n,no,a,theta,phi):\n",
     "    return (1.0-(-1.0)**n*np.cos( np.pi*n*np.sqrt(1.0-(no/n)**2)*epN(a,theta,phi) ) ) / \\\n",
     "               ( n**2*(1.0-(1.0-(no/n)**2)*epN(a,theta,phi)**2 )**2 )\n",
@@ -61,8 +64,8 @@
     "               ( n**2*(1.0-(1.0-(no/n)**2)*emN(a,theta,phi)**2 )**2 )\n",
     "\n",
     "def Gn(eta,n,no,a,theta,phi):\n",
-    "    return 2.0/np.pi*eta**2*n**2*np.sqrt(1.0-(no/n)**2)*Dp(n,no,a,theta,phi)*Dm(n,no,a,theta,phi)*\\\n",
-    "            Cr(a,theta)*( 1.0 + 2.0*(no/n)**2  )\n",
+    "    return 16.0/(np.pi*2)*eta**2*n**2*np.sqrt(1.0-(no/n)**2)*Dp(n,no,a,theta,phi)*Dm(n,no,a,theta,phi)*\\\n",
+    "            ( Cr(a,theta) + (no/n)**2 * CrM(a,theta) )\n",
     "\n",
     "def GnInt(eta,n,no,a):\n",
     "    return (dblquad(lambda phi, theta: np.sin(theta)*Gn(eta,n,no,a,theta,phi), \\\n",
@@ -71,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -95,15 +98,7 @@
     "for i in range(0,100):\n",
     "    GnSet0[i] = GnInt(1,NSet[i],0.0,np.pi/2)[0]\n",
     "    \n",
-    "np.savetxt(\"/home/juliane.oliveira/Documents/GitHub/String/DataGn/GnSet0_05pi.out\", GnSet0 )\n",
-    "\n",
-    "\n",
-    "GnSet1 = np.linspace(0,0,100)\n",
-    "\n",
-    "for i in range(1,100):\n",
-    "    GnSet1[i] = GnInt(1,NSet[i],1.0,np.pi/2)[0]\n",
-    "    \n",
-    "np.savetxt(\"/home/juliane.oliveira/Documents/GitHub/String/DataGn/GnSet1_05pi.out\", GnSet1 )\n"
+    "np.savetxt(\"DataGn/GnSet0_05pi.out\", GnSet0 )"
    ]
   },
   {
