--- a/A-H_stringRadiationCuspless_toRun3.ipynb
+++ b/A-H_stringRadiationCuspless_toRun3.ipynb
@@ -52,6 +52,9 @@
     "def Cr(a,theta):\n",
     "    return (np.cos(theta) * np.sin(a))**2\n",
     "\n",
+    "def CrM(a,theta):\n",
+    "    return (np.sin(theta) * np.sin(a))**2\n",
+    "\n",
     "def Dp(n,no,a,theta,phi):\n",
     "    return (1.0-(-1.0)**n*np.cos( np.pi*n*np.sqrt(1.0-(no/n)**2)*epN(a,theta,phi) ) ) / \\\n",
     "               ( n**2*(1.0-(1.0-(no/n)**2)*epN(a,theta,phi)**2 )**2 )\n",
@@ -61,8 +64,8 @@
     "               ( n**2*(1.0-(1.0-(no/n)**2)*emN(a,theta,phi)**2 )**2 )\n",
     "\n",
     "def Gn(eta,n,no,a,theta,phi):\n",
-    "    return 2.0/np.pi*eta**2*n**2*np.sqrt(1.0-(no/n)**2)*Dp(n,no,a,theta,phi)*Dm(n,no,a,theta,phi)*\\\n",
-    "            Cr(a,theta)*( 1.0 + 2.0*(no/n)**2  )\n",
+    "    return 16.0/(np.pi*2)*eta**2*n**2*np.sqrt(1.0-(no/n)**2)*Dp(n,no,a,theta,phi)*Dm(n,no,a,theta,phi)*\\\n",
+    "            ( Cr(a,theta) + (no/n)**2 * CrM(a,theta) )\n",
     "\n",
     "def GnInt(eta,n,no,a):\n",
     "    return (dblquad(lambda phi, theta: np.sin(theta)*Gn(eta,n,no,a,theta,phi), \\\n",
@@ -71,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -89,20 +92,13 @@
     }
    ],
    "source": [
-    "GnSet4 = np.linspace(0,0,100)\n",
+    "GnSet2 = np.linspace(0,0,100)\n",
     "NSet = np.linspace(1,100,100)\n",
     "\n",
-    "for i in range(4,100):\n",
-    "    GnSet4[i] = GnInt(1,NSet[i],4.0,np.pi/2)[0]\n",
+    "for i in range(0,100):\n",
+    "    GnSet2[i] = GnInt(1,NSet[i]+2,2.0,np.pi/2)[0]\n",
     "    \n",
-    "np.savetxt(\"/home/juliane.oliveira/Documents/GitHub/String/DataGn/GnSet4_05pi.out\", GnSet4 )\n",
-    "\n",
-    "GnSet5 = np.linspace(0,0,100)\n",
-    "\n",
-    "for i in range(5,100):\n",
-    "    GnSet5[i] = GnInt(1,NSet[i],5.0,np.pi/2)[0]\n",
-    "    \n",
-    "np.savetxt(\"/home/juliane.oliveira/Documents/GitHub/String/DataGn/GnSet5_05pi.out\", GnSet5 )\n"
+    "np.savetxt(\"DataGn/GnSet2_05pi.out\", GnSet2 )"
    ]
   },
   {
