--- a/A-H_stringRadiationCuspless_toRun9.ipynb
+++ b/A-H_stringRadiationCuspless_toRun9.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,6 +52,9 @@
     "def Cr(a,theta):\n",
     "    return (np.cos(theta) * np.sin(a))**2\n",
     "\n",
+    "def CrM(a,theta):\n",
+    "    return (np.sin(theta) * np.sin(a))**2\n",
+    "\n",
     "def Dp(n,no,a,theta,phi):\n",
     "    return (1.0-(-1.0)**n*np.cos( np.pi*n*np.sqrt(1.0-(no/n)**2)*epN(a,theta,phi) ) ) / \\\n",
     "               ( n**2*(1.0-(1.0-(no/n)**2)*epN(a,theta,phi)**2 )**2 )\n",
@@ -61,8 +64,8 @@
     "               ( n**2*(1.0-(1.0-(no/n)**2)*emN(a,theta,phi)**2 )**2 )\n",
     "\n",
     "def Gn(eta,n,no,a,theta,phi):\n",
-    "    return 2.0/np.pi*eta**2*n**2*np.sqrt(1.0-(no/n)**2)*Dp(n,no,a,theta,phi)*Dm(n,no,a,theta,phi)*\\\n",
-    "            Cr(a,theta)*( 1.0 + 2.0*(no/n)**2  )\n",
+    "    return 16.0/(np.pi*2)*eta**2*n**2*np.sqrt(1.0-(no/n)**2)*Dp(n,no,a,theta,phi)*Dm(n,no,a,theta,phi)*\\\n",
+    "            ( Cr(a,theta) + (no/n)**2 * CrM(a,theta) )\n",
     "\n",
     "def GnInt(eta,n,no,a):\n",
     "    return (dblquad(lambda phi, theta: np.sin(theta)*Gn(eta,n,no,a,theta,phi), \\\n",
@@ -71,60 +74,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/juliane.oliveira/.local/lib/python3.9/site-packages/scipy/integrate/_quadpack_py.py:1225: IntegrationWarning: The maximum number of subdivisions (50) has been achieved.\n",
-      "  If increasing the limit yields no improvement it is advised to analyze \n",
-      "  the integrand in order to determine the difficulties.  If the position of a \n",
-      "  local difficulty can be determined (singularity, discontinuity) one will \n",
-      "  probably gain from splitting up the interval and calling the integrator \n",
-      "  on the subranges.  Perhaps a special-purpose integrator should be used.\n",
-      "  quad_r = quad(f, low, high, args=args, full_output=self.full_output,\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "GnSet40 = np.linspace(0,0,100)\n",
-    "NSet = np.linspace(1,100,100)\n",
-    "\n",
-    "for i in range(40,100):\n",
-    "    GnSet40[i] = GnInt(1,NSet[i],40.0,np.pi/2)[0]\n",
-    "    \n",
-    "np.savetxt(\"/home/juliane.oliveira/Documents/GitHub/String/DataGn/GnSet40_05pi.out\", GnSet40 )\n",
-    "\n",
-    "GnSet45 = np.linspace(0,0,100)\n",
-    "\n",
-    "for i in range(45,100):\n",
-    "    GnSet45[i] = GnInt(1,NSet[i],45.0,np.pi/2)[0]\n",
-    "    \n",
-    "np.savetxt(\"/home/juliane.oliveira/Documents/GitHub/String/DataGn/GnSet45_05pi.out\", GnSet45 )\n",
-    "\n",
-    "GnSet50 = np.linspace(0,0,100)\n",
-    "\n",
-    "for i in range(50,100):\n",
-    "    GnSet50[i] = GnInt(1,NSet[i],50.0,np.pi/2)[0]\n",
-    "    \n",
-    "np.savetxt(\"/home/juliane.oliveira/Documents/GitHub/String/DataGn/GnSet50_05pi.out\", GnSet50 )\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "GnSet8 = np.linspace(0,0,100)\n",
+    "NSet = np.linspace(1,100,100)\n",
+    "\n",
+    "for i in range(0,100):\n",
+    "    GnSet8[i] = GnInt(1,NSet[i]+8,8.0,np.pi/2)[0]\n",
+    "    \n",
+    "np.savetxt(\"DataGn/GnSet8_05pi.out\", GnSet8 )"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -138,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
