--- a/oldCodes/A-H_stringRadiationCuspless_toRun10.ipynb
+++ b/oldCodes/A-H_stringRadiationCuspless_toRun10.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,9 +52,6 @@
     "def Cr(a,theta):\n",
     "    return (np.cos(theta) * np.sin(a))**2\n",
     "\n",
-    "def CrM(a,theta):\n",
-    "    return (np.sin(theta) * np.sin(a))**2\n",
-    "\n",
     "def Dp(n,no,a,theta,phi):\n",
     "    return (1.0-(-1.0)**n*np.cos( np.pi*n*np.sqrt(1.0-(no/n)**2)*epN(a,theta,phi) ) ) / \\\n",
     "               ( n**2*(1.0-(1.0-(no/n)**2)*epN(a,theta,phi)**2 )**2 )\n",
@@ -64,8 +61,8 @@
     "               ( n**2*(1.0-(1.0-(no/n)**2)*emN(a,theta,phi)**2 )**2 )\n",
     "\n",
     "def Gn(eta,n,no,a,theta,phi):\n",
-    "    return 16.0/(np.pi*2)*eta**2*n**2*np.sqrt(1.0-(no/n)**2)*Dp(n,no,a,theta,phi)*Dm(n,no,a,theta,phi)*\\\n",
-    "            ( Cr(a,theta) + (no/n)**2 * CrM(a,theta) )\n",
+    "    return 2.0/np.pi*eta**2*n**2*np.sqrt(1.0-(no/n)**2)*Dp(n,no,a,theta,phi)*Dm(n,no,a,theta,phi)*\\\n",
+    "            Cr(a,theta)*( 1.0 + 2.0*(no/n)**2  )\n",
     "\n",
     "def GnInt(eta,n,no,a):\n",
     "    return (dblquad(lambda phi, theta: np.sin(theta)*Gn(eta,n,no,a,theta,phi), \\\n",
@@ -74,23 +71,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/juliane.oliveira/.local/lib/python3.9/site-packages/scipy/integrate/_quadpack_py.py:1225: IntegrationWarning: The maximum number of subdivisions (50) has been achieved.\n",
+      "  If increasing the limit yields no improvement it is advised to analyze \n",
+      "  the integrand in order to determine the difficulties.  If the position of a \n",
+      "  local difficulty can be determined (singularity, discontinuity) one will \n",
+      "  probably gain from splitting up the interval and calling the integrator \n",
+      "  on the subranges.  Perhaps a special-purpose integrator should be used.\n",
+      "  quad_r = quad(f, low, high, args=args, full_output=self.full_output,\n",
+      "/home/juliane.oliveira/.local/lib/python3.9/site-packages/scipy/integrate/_quadpack_py.py:1225: IntegrationWarning: The integral is probably divergent, or slowly convergent.\n",
+      "  quad_r = quad(f, low, high, args=args, full_output=self.full_output,\n"
+     ]
+    }
+   ],
    "source": [
-    "GnSet7 = np.linspace(0,0,100)\n",
+    "GnSet60 = np.linspace(0,0,100)\n",
     "NSet = np.linspace(1,100,100)\n",
     "\n",
-    "for i in range(0,100):\n",
-    "    GnSet7[i] = GnInt(1,NSet[i]+7,7.0,np.pi/2)[0]\n",
+    "for i in range(60,100):\n",
+    "    GnSet60[i] = GnInt(1,NSet[i],60.0,np.pi/2)[0]\n",
     "    \n",
-    "np.savetxt(\"DataGn/GnSet7_05pi.out\", GnSet7 )"
+    "np.savetxt(\"/home/juliane.oliveira/Documents/GitHub/String/DataGn/GnSet60_05pi.out\", GnSet60 )\n",
+    "\n",
+    "GnSet70 = np.linspace(0,0,100)\n",
+    "\n",
+    "for i in range(70,100):\n",
+    "    GnSet70[i] = GnInt(1,NSet[i],70.0,np.pi/2)[0]\n",
+    "    \n",
+    "np.savetxt(\"/home/juliane.oliveira/Documents/GitHub/String/DataGn/GnSet70_05pi.out\", GnSet70 )\n",
+    "\n",
+    "GnSet80 = np.linspace(0,0,100)\n",
+    "\n",
+    "for i in range(80,100):\n",
+    "    GnSet80[i] = GnInt(1,NSet[i],80.0,np.pi/2)[0]\n",
+    "    \n",
+    "np.savetxt(\"/home/juliane.oliveira/Documents/GitHub/String/DataGn/GnSet80_05pi.out\", GnSet80 )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -104,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
