--- a/A-H_stringRadiationCuspless_toRun2.ipynb
+++ b/A-H_stringRadiationCuspless_toRun2.ipynb
@@ -74,9 +74,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/juliane.oliveira/.local/lib/python3.9/site-packages/scipy/integrate/_quadpack_py.py:1225: IntegrationWarning: The maximum number of subdivisions (50) has been achieved.\n",
+      "  If increasing the limit yields no improvement it is advised to analyze \n",
+      "  the integrand in order to determine the difficulties.  If the position of a \n",
+      "  local difficulty can be determined (singularity, discontinuity) one will \n",
+      "  probably gain from splitting up the interval and calling the integrator \n",
+      "  on the subranges.  Perhaps a special-purpose integrator should be used.\n",
+      "  quad_r = quad(f, low, high, args=args, full_output=self.full_output,\n"
+     ]
+    }
+   ],
    "source": [
     "GnSet1 = np.linspace(0,0,100)\n",
     "NSet = np.linspace(1,100,100)\n",
