--- a/A-H_stringRadiationCuspless_toRun3.ipynb
+++ b/A-H_stringRadiationCuspless_toRun3.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -87,6 +87,10 @@
       "  local difficulty can be determined (singularity, discontinuity) one will \n",
       "  probably gain from splitting up the interval and calling the integrator \n",
       "  on the subranges.  Perhaps a special-purpose integrator should be used.\n",
+      "  quad_r = quad(f, low, high, args=args, full_output=self.full_output,\n",
+      "/home/juliane.oliveira/.local/lib/python3.9/site-packages/scipy/integrate/_quadpack_py.py:1225: IntegrationWarning: The occurrence of roundoff error is detected, which prevents \n",
+      "  the requested tolerance from being achieved.  The error may be \n",
+      "  underestimated.\n",
       "  quad_r = quad(f, low, high, args=args, full_output=self.full_output,\n"
      ]
     }
