--- a/A-H_stringRadiationCuspless_toRun1.ipynb
+++ b/A-H_stringRadiationCuspless_toRun1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,6 +32,42 @@
     "\n",
     "from mpmath import nsum, exp, inf\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Machine parameters for float64\n",
+      "---------------------------------------------------------------\n",
+      "precision =  15   resolution = 1.0000000000000001e-15\n",
+      "machep =    -52   eps =        2.2204460492503131e-16\n",
+      "negep =     -53   epsneg =     1.1102230246251565e-16\n",
+      "minexp =  -1022   tiny =       2.2250738585072014e-308\n",
+      "maxexp =   1024   max =        1.7976931348623157e+308\n",
+      "nexp =       11   min =        -max\n",
+      "smallest_normal = 2.2250738585072014e-308   smallest_subnormal = 4.9406564584124654e-324\n",
+      "---------------------------------------------------------------\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_575827/891928311.py:1: DeprecationWarning: `np.float` is a deprecated alias for the builtin `float`. To silence this warning, use `float` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.float64` here.\n",
+      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
+      "  print(np.finfo(np.float))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.finfo(np.float))"
    ]
   },
   {
