--- a/Burden/A-H_stringRadiationBurden05Pi_100.ipynb
+++ b/Burden/A-H_stringRadiationBurden05Pi_100.ipynb
@@ -144,9 +144,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/juliane.oliveira/.local/lib/python3.9/site-packages/scipy/integrate/_quadpack_py.py:1225: IntegrationWarning: The maximum number of subdivisions (50) has been achieved.\n",
+      "  If increasing the limit yields no improvement it is advised to analyze \n",
+      "  the integrand in order to determine the difficulties.  If the position of a \n",
+      "  local difficulty can be determined (singularity, discontinuity) one will \n",
+      "  probably gain from splitting up the interval and calling the integrator \n",
+      "  on the subranges.  Perhaps a special-purpose integrator should be used.\n",
+      "  quad_r = quad(f, low, high, args=args, full_output=self.full_output,\n"
+     ]
+    }
+   ],
    "source": [
     "#Gamm11M_05pi_0 = np.linspace(0,0,500)\n",
     "#Gamm11M_05pi_1 = np.linspace(0,0,500)\n",
@@ -191,7 +205,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -205,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
